Bug 404228 - Load last session fails if closed by logout/shutdown
Summary: Load last session fails if closed by logout/shutdown
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: 20.04.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-12 08:32 UTC by Alan Prescott
Modified: 2024-10-17 10:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Prescott 2019-02-12 08:32:35 UTC
SUMMARY
Kate does not load the last session if it was closed as part of the logout/shutdown process. Manual close works OK but if kate is left open (e.g. in another activity) and closed automatically during logout it does not load the last session when restarted. I've tried Save Session in the hope this might also register the current session for reload but it doesn't

STEPS TO REPRODUCE
1. run kate having set load last session
2. switch to a different session
3. logout/reboot
4. start kate

OBSERVED RESULT
loads whatever session was running at step 1

EXPECTED RESULT
load last used session

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: plasma-framework-5.54.0-lp150.238.2.x86_64
KDE Frameworks Version: 
Qt Version: 5.12.1-lp150.1.1

ADDITIONAL INFORMATION
Comment 1 Justin Zobel 2020-11-13 03:33:54 UTC
Can you please test and confirm if this issue is still occurring or if this bug report can be marked as resolved. I'm setting status to "needsinfo" pending your response, please change back to "reported" or "resolved" when you respond, thanks.
Comment 2 Alan Prescott 2020-11-14 06:30:40 UTC
Kate version 20.04.2.
1. Launch kate 
2. Open session_A/file_A
3. Close kate
4. Launch kate
5. Open session_B/file_B
6. Reboot
7. Launch kate
... Kate restores session_A/file_A

Hope this helps

Operating System: openSUSE Leap 15.2
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.71.0
Qt Version: 5.12.7
Kernel Version: 5.3.18-lp152.47-default
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 7.5 GiB of RAM
Comment 3 Christoph Cullmann 2024-06-18 17:16:59 UTC
Could you retry that with a more recent version?
Comment 4 Alan Prescott 2024-06-19 08:42:58 UTC
Kate Version 24.05.0

Kate -> Settings -> Settings -> Application Startup Behaviour = Load last use session

If kate closed automatically during reboot, on restart the session/file active when kate was last closed manually is loaded - i.e. the behaviour is unchanged since first reported

This should be marked as a low priority bug, it was just one I thought should be pointed out, after all, I should close kate properly before logging out but sometimes I'm just in a rush :)

Operating System: openSUSE Tumbleweed 20240607
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.1
Kernel Version: 6.9.3-1-default (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 6800H with Radeon Graphics
Memory: 30.5 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3070 Ti Laptop GPU/PCIe/SSE2
Manufacturer: LENOVO
Product Name: 82RD
System Version: Legion 5 15ARH7H
Comment 5 Bug Janitor Service 2024-07-04 03:47:27 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Alan Prescott 2024-07-04 06:05:02 UTC
See my comment 2024-06-19 08:42:58 UTC
Comment 7 Bug Janitor Service 2024-10-15 14:18:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1620
Comment 8 Christoph Cullmann 2024-10-17 10:09:38 UTC
Git commit 98b6ae6ef3225f1a784b12a00ce693d68058d3df by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 17/10/2024 at 10:05.
Pushed by cullmann into branch 'master'.

Save session once after startup

else if the user never opens a new doc or closes one session-autosave
will never trigger and the session will only get saved if Kate is
properly closed and not if it gets killed.

M  +7    -0    apps/lib/kateapp.cpp
M  +5    -5    apps/lib/session/katesessionmanager.cpp

https://invent.kde.org/utilities/kate/-/commit/98b6ae6ef3225f1a784b12a00ce693d68058d3df