Save session once after startup

else if the user never opens a new doc or closes one session-autosave
will never trigger and the session will only get saved if Kate is
properly closed and not if it gets killed.

BUG: 404228