apps/lib/session/katesessionmanager.cpp
@@ -401,11 +401,6 @@ void KateSessionManager::saveSessionTo(KConfig *sc, bool isAutoSave)
         }
     }
 
-    auto activeSession = KateApp::self()->sessionManager()->activeSession();
-    if (!activeSession->isAnonymous()) {
-        KateApp::self()->stashManager()->stashDocuments(activeSession->config(), KateApp::self()->documents());
-    }
-
     sc->sync();
 
     /**
@@ -431,6 +426,11 @@ bool KateSessionManager::saveActiveSession(bool rememberAsLast, bool isAutoSave)
     }
 
     KConfig *sc = activeSession()->config();
+
+    // Stash docs if the session is not anon
+    if (!activeSession()->isAnonymous()) {
+        KateApp::self()->stashManager()->stashDocuments(sc, KateApp::self()->documents());
+    }
 
     saveSessionTo(sc, isAutoSave);
 
